--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ p{
 }
 .course-col{
     flex-basis: 49%;
-    background: #fff3f3;
+    background: #e3eb9e;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
@@ -200,7 +200,7 @@ p{
 }
 .about-col{
     flex-basis: 100%;
-    background: #fff3f3;
+    background: #e3eb9e;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
